petstore-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petstore-webapp
  labels:
    app: petstore-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petstore-webapp
  template:
    metadata:
      labels:
        app: petstore-webapp
    spec:
      containers:
        - name: petstore-webapp
          image: alendoc/java-petstore:v1
          stdin: true
          tty: true
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: petstore-webapp-service
spec:
  type: NodePort
  selector:
    app: petstore-webapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: petstore-webapp
spec:
  type: LoadBalancer
  selector:
    app: petstore-webapp
  ports:
    - port: 8080
      targetPort: 8080
