cert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - student.ehb.petstore.com
      secretName: student.ehb.petstore.com
  rules:
    - host: student.ehb.petstore.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petstore-webapp
                port:
                  number: 8080
