complete-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statefulset
  labels:
    app: mysql
spec:
  serviceName: "mysql"
  replicas: 2
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.2.0
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-vol
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-vol
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petstore-webapp
  labels:
    app: petstore-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petstore-webapp
  template:
    metadata:
      labels:
        app: petstore-webapp
    spec:
      containers:
        - name: petstore-webapp
          image: alendoc/java-petstore:v1
          stdin: true
          tty: true
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: petstore-webapp
spec:
  type: LoadBalancer
  selector:
    app: petstore-webapp
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - student.ehb.petstore.com
      secretName: student.ehb.petstore.com
  rules:
    - host: student.ehb.petstore.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petstore-webapp
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-specific-ports
spec:
  podSelector:
    matchLabels:
      app: petstore-webapp
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 443
  egress:
    - ports:
        - port: 443
